T25: library favorites: FavoritesChecker job, favorites API, Library page
